--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "express": "^4.16.1"
+    },
+    "devDependencies": {
+        "eslint": "^6.7.2",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.18.2"
     }
 }
