--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "axios": "^0.19.0",
-        "express": "^4.16.1"
+        "axios": "^0.19.0"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
