--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "docker_web_app",
+    "name": "super-enigma-be",
     "version": "1.0.0",
     "description": "Node.js on Docker",
     "author": "First Last <first.last@example.com>",
@@ -8,7 +8,8 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "axios": "^0.19.0"
+        "axios": "^0.19.0",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
