--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "super-enigma-be",
     "version": "1.0.0",
     "description": "Node.js on Docker",
-    "author": "First Last <first.last@example.com>",
-    "main": "server.js",
+    "author": "ilona.salomenskaya@instinctools.com",
+    "main": "index.js",
     "scripts": {
-        "start": "node server.js",
+        "start": "node src/index.js",
         "docker:build": "docker build -t projects/super-enigma-be .",
         "docker:run": "docker run -p 49160:8080 -d projects/super-enigma-be",
         "curl": "curl -i localhost:49160"
