--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongodb": "^3.3.5"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
