--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "axios": "^0.19.0",
         "express": "^4.17.1",
-        "mongodb": "^3.3.5"
+        "mongodb": "^3.3.5",
+        "mongoose": "^5.8.0"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
