--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Node.js on Docker",
     "author": "ilona.salomenskaya@instinctools.com",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
         "docker:build": "docker build -t projects/super-enigma-be .",
