--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "cron": "^1.7.2",
         "express": "^4.17.1",
         "mongodb": "^3.3.5",
         "mongoose": "^5.8.0"
